--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 <main>
   <section>
+    <h2 class="idle-h2"> </h2>
     <div class="img-div">
       <img class="hero-img" src="images/illustration-hero.svg" alt="">
     </div>
@@ -38,7 +39,7 @@
           <img src="images/icon-music.svg" alt="">
         </div>
         <div class="annual-div">
-          <h4 class="plan-type"> <strong>Annual Plan</strong> </h4>
+          <strong class="plan-type">Annual Plan</strong> 
           <p class="price">$59.99/year</p>
         </div>
         <div class="change-div">
