--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <main>
   <section>
-    <h2 class="idle-h2"> </h2>
+    <h2 class="idle-h2">Lorem ipsum dolor sit amet.</h2>
     <div class="img-div">
       <img class="hero-img" src="images/illustration-hero.svg" alt="">
     </div>
